# bridge_pilot-01

./: Makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
src/bridgepilot/: app.py  cli.py  config.py  loadsettings.py  settings.py
src/bridgepilot/content/: htmlfiles.py
src/bridgepilot/datatransfer/: restapi.py  rpcapi.py
src/bridgepilot/functions/: utils.py
src/bridgepilot/ux/: cli.py  srv.py
