[tool.poetry]
name = "bridgepilot"
version = "0.1.8"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]
readme = "README.md"
packages = [{include = "bridgepilot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
basekit = {git = "https://github.com/terminal-labs/basekit.git"}

[tool.poetry.scripts]
bridgepilot = 'bridgepilot.ux.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
